--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Miao miao cat</title>
+    <title>租房信息汇总</title>
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <%= javascript_include_tag "html5" %>
@@ -19,16 +19,16 @@
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar">11</span>
+            <span class="icon-bar">22</span>
+            <span class="icon-bar">33</span>
           </a>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">喵喵猫</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li class="active"><a href="#">首页</a></li>
+              <li><a href="#about">关于我们</a></li>
+              <li><a href="#contact">联系我们</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -41,6 +41,7 @@
            <div class="span9">
               <%= yield %>
             </div>
+            <!--
             <div class="span3">
               <div class="well sidebar-nav">
                 <h3>Sidebar</h3>
@@ -50,12 +51,15 @@
                     <li><%= link_to "Link2", "/path2"  %></li>
                     <li><%= link_to "Link3", "/path3"  %></li>
                 </ul>
-              </div><!--/.well -->
-            </div><!--/span-->
+              </div>
+            </div>
+            -->
         </div><!--/row-->
       </div><!--/content-->
     </div><!--/container -->
-
-
+    <hr/>
+    <footer>
+      <span class="center">&copy; Miaomiaocat 2012</span>
+    </footer>
   </body>
 </html>
