working on crawler

--- a/app/views/source_websites/_form.html.erb
+++ b/app/views/source_websites/_form.html.erb
@@ -31,6 +31,19 @@
     <%= f.label :last_fetched_at_id %><br />
     <%= f.text_field :last_fetched_at_id %>
   </div>
+
+  <div class="field">
+    <%= f.label :information_list_css%><br />
+    <%= f.text_field :information_list_css%>
+  </div>
+  <div class="field">
+    <%= f.label :original_url_css%><br />
+    <%= f.text_field :original_url_css%>
+  </div>
+  <div class="field">
+    <%= f.label :sample_item_content%><br />
+    <%= f.text_area :sample_item_content%>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
