--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,21 +1,22 @@
 <h1>租房信息列表</h1>
 
-<table>
+<table class="table table-striped">
+  <thead>
   <tr>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>来源网站</th>
+    <th>信息提要</th>
+    <th>抓取日期</th>
   </tr>
+  </thead>
 
+  <tbody>
 <% @items.each do |item| %>
   <tr>
-    <td><%= link_to 'Show', item %></td>
-    <td><%= link_to 'Edit', edit_item_path(item) %></td>
-    <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to item.source_website.try(:name), item.source_website.try(:url), :target => "_blank" %></td>
+    <td><%= link_to item.content, item.original_url, :target => "_blank" %> </td>
+    <td><%= item.created_at %> </td>
   </tr>
 <% end %>
+  </tbody>
 </table>
 
-<br />
-
-<%= link_to 'New Item', new_item_path %>
