--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,13 @@
             <span class="icon-bar">22</span>
             <span class="icon-bar">33</span>
           </a>
-          <a class="brand" href="#">喵喵猫</a>
+          <%= link_to "房子呀", root_path, :class => "brand" %>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">首页</a></li>
+              <li><%= link_to "首页", root_path %></li>
+              <li><%= link_to "站点管理", source_websites_path %></li>
               <li><a href="#about">关于我们</a></li>
-              <li><a href="#contact">联系我们</a></li>
+              <li class="active"><a href="#contact">联系我们</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
