#6 should keep the key_word in search bar on the landing page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 <h1>租房信息列表</h1>
 
 <%= form_tag items_path, :method => :get, :class => "form-search" do %>
-  <%= text_field_tag "key_word", nil, :class => "input-medium search-query",
+  <%= text_field_tag "key_word", @key_word, :class => "input-medium search-query",
     :placeholder=>"搜索条件，比如：东直门" %>
   <%= submit_tag "搜索", :class => "btn" %>
 <% end %>
