added gems: haml, devise, cancan, and powered by ...

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
     </div><!--/container -->
     <hr/>
     <footer>
-      <span class="center">&copy; Miaomiaocat 2012</span>
+      <span class="center">&copy; Fangziya.com 2012 , powered by Miaomiao Cat</span>
     </footer>
   </body>
 </html>
