more info shown on index page

--- a/app/views/source_websites/_form.html.haml
+++ b/app/views/source_websites/_form.html.haml
@@ -2,6 +2,9 @@
   .field
     = f.label :name, :class => "label label-important"
     = f.text_field :name
+  .field
+    = f.label :url, :class => "label label-important"
+    = f.text_field :url
   .field.label.label-important
     = f.label :url_where_fetch_starts
     = f.text_field :url_where_fetch_starts
