rearranged the view of source_websites

--- a/app/views/source_websites/index.html.erb
+++ b/app/views/source_websites/index.html.erb
@@ -2,14 +2,11 @@
 
 <table class="table table-striped">
   <tr>
-    <th>名字</th>
+    <th style="width: 150px">名字</th>
     <th>开始URL</th>
-    <th>最近一次抓取的时间</th>
-    <th>最近一次抓取的信息</th>
+    <th style="width: 80px">最近一次抓取的时间</th>
+    <th style="width: 100px">最近一次抓取的信息</th>
     <th>状态</th>
-    <th>信息列表页css</th>
-    <th>信息详细页css</th>
-    <th>信息发布时间css</th>
     <th>操作</th>
   </tr>
 
@@ -18,11 +15,8 @@
     <td><%= link_to source_website.name, source_website %></td>
     <td><%= link_to source_website.url_where_fetch_starts, source_website.url_where_fetch_starts, :target => "_blank" %></td>
     <td><%= source_website.last_fetched_on %></td>
-    <td><%= source_website.last_fetched_item_url %></td>
+    <td><%= truncate source_website.last_fetched_item_url, :length => 50 %></td>
     <td><%= source_website.status%></td>
-    <td><%= source_website.items_list_css %></td>
-    <td><%= source_website.item_detail_page_url_css %></td>
-    <td><%= source_website.item_published_at_css %></td>
     <td>
       <%= link_to 'Edit', edit_source_website_path(source_website) %>
       <%= link_to 'Destroy', source_website, :confirm => 'Are you sure?', :method => :delete %>
