adding source_website: sofun

--- a/app/views/source_websites/_form.html.haml
+++ b/app/views/source_websites/_form.html.haml
@@ -9,7 +9,7 @@
     = f.label :url_where_fetch_starts
     = f.text_field :url_where_fetch_starts
   .field.label.label-important
-    = f.label :items_list_css
+    = f.label :items_list_css, "每个item的CSS"
     = f.text_field :items_list_css
   .field.label.label-important
     = f.label :next_page_css
