implemented new feature(for crawler) : invalid_item_detail_url_pattern

--- a/app/views/source_websites/_form.html.haml
+++ b/app/views/source_websites/_form.html.haml
@@ -27,6 +27,9 @@
     = f.label :status
     = f.text_field :status
   .field
+    = f.label :invalid_item_detail_url_pattern, "无效url pattern(置顶啥的)"
+    = f.text_field :invalid_item_detail_url_pattern
+  .field
     = f.label :last_fetched_item_url
     = f.text_field :last_fetched_item_url
   .field
