--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -20,7 +20,9 @@
   <tr>
     <td><%= link_to item.source_website.try(:name), item.source_website.try(:url_where_fetch_starts), :target => "_blank" %></td>
     <td><%= link_to item.content, item.original_url, :target => "_blank" %> </td>
-    <td><%= item.created_at.strftime("%Y-%m-%d %H:%M:%S") %> </td>
+    <td>
+    <%= DateTime.strptime(item.created_at, "%Y-%m-%dT%H:%M:%S+08:00").strftime("%Y-%m-%d %H:%M:%S") %>
+    </td>
 <% end %>
   </tbody>
 </table>
