--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,8 +1,7 @@
 <h1>租房信息列表</h1>
-
 <%= form_tag items_path, :method => :get, :class => "form-search" do %>
-  <%= text_field_tag "key_word", @key_word, :class => "input-medium search-query",
-    :placeholder=>"搜索条件，比如：东直门" %>
+  <%= text_field_tag "key_word", @key_word, :class => "input-medium search-query",:style => "width: 300px",
+    :placeholder=>"搜索条件，多的用空格分开，比如：东直门 个人" %>
   <%= submit_tag "搜索", :class => "btn" %>
 <% end %>
 <%= paginate @items, :theme => 'twitter-bootstrap' %>
