--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
       <div class="content">
         <div class="row">
            <div class="span9">
+            <p id="notice"><%= notice %></p>
               <%= yield %>
             </div>
             <!--
