--- a/app/views/source_websites/_form.html.haml
+++ b/app/views/source_websites/_form.html.haml
@@ -1,10 +1,7 @@
-= form_for(@source_website) do |f|
+= form_for @source_website do |f|
   .field
     = f.label :name, :class => "label label-important"
     = f.text_field :name
-  .field
-    = f.label :url, :class => "label label-important"
-    = f.text_field :url
   .field.label.label-important
     = f.label :url_where_fetch_starts
     = f.text_field :url_where_fetch_starts
@@ -12,35 +9,18 @@
     = f.label :items_list_css, "每个item的CSS"
     = f.text_field :items_list_css
   .field.label.label-important
-    = f.label :next_page_css
+    = f.label :next_page_css, "下一页的CSS"
     = f.text_field :next_page_css
   .field
-    = f.label :item_detail_page_url_css
+    = f.label :item_detail_page_url_css, "详细页面链接CSS"
     = f.text_field :item_detail_page_url_css
-  .field
-    = f.label :max_pages_per_fetch
-    = f.text_field :max_pages_per_fetch
-  .field
-    = f.label :max_items_per_fetch
-    = f.text_field :max_items_per_fetch
-  .field
-    = f.label :status
-    = f.text_field :status
   .field
     = f.label :invalid_item_detail_url_pattern, "无效url pattern(置顶啥的)"
     = f.text_field :invalid_item_detail_url_pattern
   .field
-    = f.label :invalid_item_css_patterns, "无效css patterns(置顶啥的，每行一组), 多个之间用 #{SourceWebsite::INVALID_CSS_SEPARATOR} 分开"
+    = f.label :invalid_item_css_patterns, "无效css patterns(置顶啥的，每行一组), 多个之间用 #{Crawler::INVALID_CSS_SEPARATOR} 分开"
     = f.text_field :invalid_item_css_patterns
-  .field
-    = f.label :last_fetched_item_url
-    = f.text_field :last_fetched_item_url
-  .field
-    = f.label :price_css
-    = f.text_field :price_css
-  .field
-    = f.label :item_published_at_css
-    = f.text_field :item_published_at_css
+
 
   .actions
     = f.submit
