1. fixed Chinese charactor's search 2. sorted by : score and created date. 3. monkey patched tire so that it supports 'min_score'

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -20,7 +20,9 @@
 <% source_website = SourceWebsite.find(item.source_website_id) if SourceWebsite.exists?( :conditions => { :id => item.source_website_id}) %>
   <tr>
     <td><%= link_to source_website.try(:name), source_website.try(:url_where_fetch_starts), :target => "_blank" %></td>
-    <td><%= link_to item.content, item.original_url, :target => "_blank" %> </td>
+    <td>
+    <pre><%= item.sort[0] %></pre>
+    <%= link_to( raw(item.highlight.content), item.original_url, :target => "_blank") %> </td>
     <td>
     <%= DateTime.strptime(item.created_at, "%Y-%m-%dT%H:%M:%S+08:00").strftime("%Y-%m-%d %H:%M:%S") %>
     </td>
