--- a/app/views/source_websites/_form.html.haml
+++ b/app/views/source_websites/_form.html.haml
@@ -20,7 +20,9 @@
   .field
     = f.label :invalid_item_css_patterns, "无效css patterns(置顶啥的，每行一组), 多个之间用 #{Crawler::INVALID_CSS_SEPARATOR} 分开"
     = f.text_field :invalid_item_css_patterns
-
+  .field
+    = f.label :last_fetched_item_url, "最后一次抓取的url"
+    = f.text_field :last_fetched_item_url
 
   .actions
     = f.submit
