--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,11 +2,10 @@
 %html{:lang => "en"}
   %head
     %meta{:charset => "utf-8"}
-    %title 租房信息汇总
-    -#!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    -#<!--[if lt IE 9]>
+    %title 房子呀 —— 各种房子的多个网站信息汇总
+    / Le HTML5 shim, for IE6-8 support of HTML5 elements
+    /[if lt IE 9]
       = javascript_include_tag "html5"
-    -#<![endif]-->
 
     = stylesheet_link_tag    "application", :media => "all"
     = javascript_include_tag "application"
@@ -22,7 +21,6 @@
           = link_to "房子呀", root_path, :class => "brand"
           .nav-collapse
             %ul.nav
-              %li #{link_to "首页", root_path}
               %li #{link_to "站点管理", source_websites_path}
               %li.active <a href="#about">关于我们</a>
 
